{
    "name": "UIInputActions",
    "maps": [
        {
            "name": "SlotSelect",
            "id": "bb544d20-4100-475e-87ef-992a459e63b7",
            "actions": [
                {
                    "name": "Slot1",
                    "type": "Button",
                    "id": "37224fcd-0084-40bc-a5ea-95db0b079133",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot2",
                    "type": "Button",
                    "id": "362b337d-b646-4e46-9a7c-644fe96ff001",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot3",
                    "type": "Button",
                    "id": "f0fefd12-7c7b-48e4-81f7-44c9a0c7dcd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot4",
                    "type": "Button",
                    "id": "1178d0b9-23d6-4bf6-9f2b-2b0024d1f341",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot5",
                    "type": "Button",
                    "id": "560f3344-0e14-43a5-98c6-e0ea9b419c63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot6",
                    "type": "Button",
                    "id": "e5c4e74e-0d8c-49d9-a610-00f0d071c48f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot7",
                    "type": "Button",
                    "id": "fe8e0798-2153-4c87-8cb6-a220f59937d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dafd6fad-2f25-4da9-ad8b-8da9b4117a8a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe48d65e-6461-4932-bfaa-917c73f37dbc",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a93fa68d-a358-4ee1-bafa-0daa33600388",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ccd5647-20ef-4472-aae2-7493977abc76",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9affa837-abc2-422d-b4a5-5eae211531c7",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ed61492-f635-4326-a204-0bd2edd00860",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54406f2a-f20d-4272-a2e1-ac07f7cc91a8",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot7",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UIMouse",
            "id": "be34963a-1310-4f64-b326-80845ddee6fb",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "95b7fbd5-31e6-460f-8a55-6b220889653d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "b9917268-422f-44dd-8d86-f1f02c14ec67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "00cdc137-06e1-450d-a7c0-02dee5e16df3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "adac1489-466e-42ed-abd2-139b70767337",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3966e994-9d6a-490c-8217-64a7f6aa8acb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43978bb0-840e-4f52-8cdc-61dd5e890333",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Toggles",
            "id": "6fc83306-ee37-4448-9d0d-4d0642371c45",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "8c56bfa8-9fab-4c41-93fd-0437d622ec47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "8de5f095-33fd-44f6-8edc-11c46a4abb7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b48813ee-20c1-4858-88c2-0f6f82e4bfe3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13ee98a4-ecbb-404c-879b-a6455ce2c4c3",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}